Added first draft of About Me to index.html

--- a/index.html
+++ b/index.html
@@ -22,19 +22,17 @@
         <content>
             <main>
                 <h2>About Me</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat, libero 
-                    vitae laoreet faucibus, ex dui posuere nunc, hendrerit tempor turpis diam id tellus. 
-                    Nullam sit amet odio sed felis luctus imperdiet id id urna. Mauris at leo mollis, 
-                    pulvinar nibh quis, cursus enim. Aliquam erat volutpat. Donec eleifend, tortor eu vo
-                    lutpat cursus, ligula velit auctor sem, id ultrices odio tortor vitae massa. Vestib
-                    ulum pellentesque rutrum massa sit amet elementum. Phasellus sed convallis orci. Pr
-                    oin et dictum risus. Sed in mi dapibus, mattis arcu vehicula, porta est. Proin id lo
-                    bortis arcu. Proin sed purus ut enim auctor gravida. Quisque sit amet venenatis ligu
-                    la. Donec scelerisque purus porttitor blandit rhoncus. Phasellus viverra pulvi
-                    nar ex vel ornare. Integer blandit, nisl vitae mattis vehicula, arcu lectus portt
-                    itor justo, in dapibus felis enim eu sapien.
-                </p>
+                <p>I know what you're thinking. . . . A Ph.D. in Social Psychology turned Web Developer. Is she 
+                    going to use that psychology voodoo stuff on my website?</p>
+                <p>The answer is yes, I am.</p>
+                <p>Social Psychogy is the study of how external cues influence a person's 
+                    internal thoughts feelings and decisions.</p>
+                <p>How does my knowledge of Social Psychology infuence how I approach web development? On the front end, there are hundreds 
+                    of cues for a user to process. How the website looks - the style, structure and ease of 
+                    navigation - can influence whether users will click what you want them to click or push them away. 
+                    On the backend, the seemless integration of functionaliy, data collection and storage will 
+                    give your company the edge over your competition.</p>
+                <p> You want to make your website the best it can be. So do I.</p>
                 <img src="https://placeimg.com/200/200/any" alt="Jane Asawa photo fits here">
             </main>
             
