Added images to index.html

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     On the backend, the seemless integration of functionaliy, data collection and storage will 
                     give your company the edge over your competition.</p>
                 <p> You want to make your website the best it can be. So do I.</p>
-                <img src="https://placeimg.com/200/200/any" alt="Jane Asawa photo fits here">
+                <img src="assets/images/janephoto.jpg" alt="Jane Asawa photo fits here">
             </main>
             
             <aside>
                 <h3>Connect with me</h3>
-                    <a href="#" target="_blank">put GitHub icon here</a>
-                    <a href="#">put LinkedIn icon here</a>
-                    <a href="#">put Stackoverflow icon here</a>
+                    <a href="https://github.com/jasawa/Basic-Portfolio" target="_blank"><img src="assets/images/if_github_square_black_107109.png" alt="GitHub" style="width:42px;height:42px;border:0;"></a>
+                    <a href="https://www.linkedin.com/in/jane-asawa" target="_blank"><img src="assets/images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:42px;height:42px;border:0;"></a>
+                    <a href="https://www.stackoverflow.com" target="_blank"><img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:42px;height:42px;border:0;"></a>
             </aside>
         </content>
     </div>
