first draft of contact.html, minor fixes in index.html and protfolio.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         
-        <content>
+        <div id="content">
             <main>
                 <h2>About Me</h2>
                 <p>I know what you're thinking. . . . A Ph.D. in Social Psychology turned Web Developer. Is she 
@@ -42,7 +42,7 @@
                     <a href="https://www.linkedin.com/in/jane-asawa" target="_blank"><img src="assets/images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:42px;height:42px;border:0;"></a>
                     <a href="https://www.stackoverflow.com" target="_blank"><img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:42px;height:42px;border:0;"></a>
             </aside>
-        </content>
+        </div>
     </div>
 
     <footer>
