beginning to style in style.css, added background-image to images folder, connected div in html to css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         
-        <div id="content">
+        <div id="backgroundcontent">
             <main>
                 <h2>About Me</h2>
                 <p>I know what you're thinking. . . . A Ph.D. in Social Psychology turned Web Developer. Is she 
