--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jane Asawa Portfolio</title>
+    <title>Jane Asawa - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -19,7 +19,7 @@
             </nav>
         </header>
             
-        <div id="content">
+        <div id="backgroundcontent">
             <main>
                 <h2>Portfolio</h2>
                 <div class="imageProduct">
