Could not get float to work.

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
         <header>
             <h1>Jane Asawa</h1>
             <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a id="index" href="index.html">About</a>
+                <a id="portfolio" href="portfolio.html">Portfolio</a>
+                <a id="contact" href="contact.html">Contact</a>
             </nav>
         </header>
         
@@ -25,16 +25,16 @@
                     <h2>Contact</h2>
                     <form>
                         <div>
-                            Name<br>
+                            <h5>Name</h5>
                             <input type="text" name="fullName" placeholder="John Smith">
                         </div>
                         <div>
-                            Email<br>
+                            <h5>Email</h5>
                             <input type="email" name="emailAddress" placeholder="example@gmail.com">
                         </div>
                         <div>
-                            Message<br>
-                            <textarea name="message" rows="10" cols="30"></textarea>
+                            <h5>Message</h5>
+                            <textarea name="message" rows="10" cols="94"></textarea>
                         </div>
                         <div id="submitBtn">
                             <input type="submit" value="Submit">
@@ -45,9 +45,11 @@
                 
                 <aside>
                     <h3>Connect with me</h3>
-                        <a href="https://github.com/jasawa/Basic-Portfolio" target="_blank"><img src="assets/images/if_github_square_black_107109.png" alt="GitHub" style="width:42px;height:42px;border:0;"></a>
-                        <a href="https://www.linkedin.com/in/jane-asawa" target="_blank"><img src="assets/images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:42px;height:42px;border:0;"></a>
-                        <a href="https://www.stackoverflow.com" target="_blank"><img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:42px;height:42px;border:0;"></a>
+                    <div class="connections">
+                        <a href="https://github.com/jasawa/Basic-Portfolio" target="_blank"><img src="assets/images/if_github_square_black_107109.png" alt="GitHub" style="width:62px;height:62px;border:0;"></a>
+                        <a href="https://www.linkedin.com/in/jane-asawa" target="_blank"><img src="assets/images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:58px;height:58px;border:0;"></a>
+                        <a href="https://www.stackoverflow.com" target="_blank"><img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:58px;height:58px;border:0;"></a>
+                    </div>
                 </aside>
             </div>
         </div>
