--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header>
             <h1>Jane Asawa</h1>
             <nav>
-                <a href="#">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a id="index" href="index.html">About</a>
+                <a id="portfolio" href="portfolio.html">Portfolio</a>
+                <a id="contact" href="contact.html">Contact</a>
             </nav>
         </header>
     
@@ -27,7 +27,7 @@
                     <img class="floatingcontent" id="janeimage" src="assets/images/janephoto.jpg" alt="Jane Asawa photo fits here">
                     <div class="floatingcontent" id="bio">
                         <p>I know what you're thinking. . . . A Ph.D. in Social Psychology turned Web Developer. Is she 
-                            going to use that psychology voodoo stuff on my website?</p>
+                            going to use that good psychology voodoo stuff on my website?</p>
                         <p>The answer is yes, I am.</p>
                         <p>Social Psychogy is the study of how external cues influence a person's 
                             internal thoughts feelings and decisions.</p>
