--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
         <header>
             <h1>Jane Asawa</h1>
             <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a id="index" href="index.html">About</a>
+                <a id="portfolio" href="portfolio.html">Portfolio</a>
+                <a id="contact" href="contact.html">Contact</a>
             </nav>
         </header>
             
@@ -23,34 +23,34 @@
             <div id=contentArea>
                 <main>
                     <h2>Portfolio</h2>
-                    <div class="imageProduct">
-                        <img src="http://lorempixel.com/400/200/technics" alt="Hangman">
+                    <div >
+                        <img src="http://lorempixel.com/400/200/technics" class="imageProduct" alt="Hangman">
                         <div class="nameProduct">
-                            Hangman
+                            <h4>Hangman</h4>
                         </div>
                     </div>
-                    <div class="imageProduct">
-                        <img src="http://lorempixel.com/400/200/abstract" alt="RPG Game">
+                    <div class="imageProduct2">
+                        <img src="http://lorempixel.com/400/200/abstract" class="imageProduct" id="imageProduct2" alt="RPG Game">
                         <div class="nameProduct">
-                            RPG Game
+                            <h4>RPG Game</h4>
                         </div>
                     </div>
-                    <div class="imageProduct">
-                        <img src="http://lorempixel.com/400/200/city" alt="Trivia Game">
+                    <div class="imageProduct3">
+                        <img src="http://lorempixel.com/400/200/city" class="imageProduct" alt="Trivia Game">
                         <div class="nameProduct">
-                            Trivia Game
+                            <h4>Trivia Game</h4>
                         </div>
                     </div>
-                    <div class="imageProduct">
-                        <img src="http://lorempixel.com/400/200/transport" alt="Rutgers Info Widget">
+                    <div class="imageProduct4">
+                        <img src="http://lorempixel.com/400/200/transport" class="imageProduct" alt="Rutgers Info Widget">
                         <div class="nameProduct">
-                            Rutgers Info Widget
+                            <h4>Rutgers Info Widget</h4>
                         </div>
                     </div>
-                    <div class="imageProduct">
-                        <img src="http://lorempixel.com/400/200/nature" alt="Rock Paper Scissors">
+                    <div class="imageProduct5">
+                        <img src="http://lorempixel.com/400/200/nature" class="imageProduct" alt="Rock Paper Scissors">
                         <div class="nameProduct">
-                            Rock Paper Scissors
+                            <h4>Rock Paper Scissors</h4>
                         </div>
                     </div>
 
@@ -58,9 +58,11 @@
                     
                 <aside>
                     <h3>Connect with me</h3>
-                        <a href="https://github.com/jasawa/Basic-Portfolio" target="_blank"><img src="assets/images/if_github_square_black_107109.png" alt="GitHub" style="width:42px;height:42px;border:0;"></a>
-                        <a href="https://www.linkedin.com/in/jane-asawa" target="_blank"><img src="assets/images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:42px;height:42px;border:0;"></a>
-                        <a href="https://www.stackoverflow.com" target="_blank"><img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:42px;height:42px;border:0;"></a>
+                    <div class="connections">
+                        <a href="https://github.com/jasawa/Basic-Portfolio" target="_blank"><img src="assets/images/if_github_square_black_107109.png" alt="GitHub" style="width:62px;height:62px;border:0;"></a>
+                        <a href="https://www.linkedin.com/in/jane-asawa" target="_blank"><img src="assets/images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:58px;height:58px;border:0;"></a>
+                        <a href="https://www.stackoverflow.com" target="_blank"><img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:58px;height:58px;border:0;"></a>
+                    </div>
                 </aside>
             </div>
         </div>
